[package]
name = "hexagon-tiles"
version = "0.1.0"
authors = ["Igal Alkon"]
edition = "2018"
description = "A utility library that allows working with the hexagon shape and related math."
license = "Zlib"
repository = "https://github.com/alkavan/hexagon-tiles"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float_eq = "0.5.0"
